Added favicons and title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html class="no-js  page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Start project</title>
+    <title>Яндекс Дом</title>
     <meta name="description" content="">
     @@include('_include/page_head.html')
   </head>
