Added variables and mixins

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <div class="layout__inner">
       <div class="layout__content">
         <main role="main">
-          <h1>Start project123</h1>
+          <h1 class="test">Привет, Геннадий!</h1>
           <div class="test-image">
 
           </div>
