[WIP] Added slider js

--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,146 @@
       <div class="page__content">
         @@include('_include/header.html')
         <main role="main" class="container">
+          <div class="top-section">
+            <section class="section section--left">
+              <h2 class="section__title">Главное</h2>
 
-          <h1 class="test">Привет, Геннадий!</h1>
-          <div class="test-image">
+              <div class="main-section">
 
+              </div>
+
+            </section>
+            <section class="section scripts-section">
+              <h2 class="section__title">Избранные сценарии</h2>
+              <div class="next">
+
+              </div>
+              <div class="prev">
+
+              </div>
+              <div class="test-slider">
+                <div class="test">
+                  <div class="test__page">
+                    <div class="test__item">
+                      1
+
+                    </div>
+                    <div class="test__item">
+                      2
+
+                    </div>
+                    <div class="test__item">
+                      3
+
+                    </div>
+
+                    <div class="test__item">
+                      4
+
+                    </div>
+                    <div class="test__item">
+                      5
+
+                    </div>
+                    <div class="test__item">
+                      6
+
+                    </div>
+                    <div class="test__item">
+                      7
+
+                    </div>
+
+                    <div class="test__item">
+                      8
+
+                    </div>
+
+                    <div class="test__item">
+                      9
+
+                    </div>
+
+                  </div>
+                  <div class="test__page">
+                    <div class="test__item">
+                      10
+
+
+                    </div>
+
+                  </div>
+                </div>
+
+
+
+              </div>
+
+            </section>
           </div>
+          <section class="section devices-section">
+            <h2 class="section__title">Избранные устройства</h2>
+            <div class="devices-swiper__arrows-prev">
+
+            </div>
+            <div class="devices-swiper__arrows-next">
+
+            </div>
+            <div class="devices-swiper">
+
+              <div class="devices-swiper__inner test2">
+                  <div class="test2__item">
+                    1
+
+                  </div>
+                  <div class="test2__item">
+                    2
+
+                  </div>
+                  <div class="test2__item">
+                    3
+
+                  </div>
+                  <div class="test2__item">
+                    4
+
+                  </div>
+                  <div class="test2__item">
+                    5
+
+                  </div>
+                  <div class="test2__item">
+                    6
+
+                  </div>
+                  <div class="test2__item">
+                    7
+
+                  </div>
+                  <div class="test2__item">
+                    8
+
+                  </div>
+                  <div class="test2__item">
+                    9
+
+                  </div>
+                  <div class="test2__item">
+                    10
+
+                  </div>
+
+                  <div class="test2__item">
+                    11
+
+                  </div>
+
+
+              </div>
+
+            </div>
+
+          </section>
         </main>
       </div>
       <div class="page__footer">
