--- a/src/index.html
+++ b/src/index.html
@@ -13,71 +13,47 @@
         <main role="main">
           <div class="container">
             <div class="top-section">
-              <section class="section section--left">
+              <section class="section top-section__left">
                 <h2 class="section__title">Главное</h2>
                 @@include('_include/main-block.html')
               </section>
-              <section class="section scripts-section">
+              <section class="section top-section__right scripts-section">
                 <div class="section__title-wr">
                   <h2 class="section__title">Избранные сценарии</h2>
-                  <div class="">
-                    <div class="next">
-
-                    </div>
-                    <div class="prev">
-
-                    </div>
+                  <div class="slider-arrows">
+                    <div class="slider-arrows__btn slider-arrows__btn--prev js-script-slider-prev"></div>
+                    <div class="slider-arrows__btn slider-arrows__btn--next js-script-slider-next"></div>
                   </div>
                 </div>
-
-                <div class="devise-block">
-                  <div class="test">
-                    <div class="test__page">
-                      <div class="test__item">
-                        1
+                <div class="script-block script-slider js-script-slider">
+                  <div class="script-slider__inner">
+                    <div class="script-slider__page">
+                      <div class="script-slider__item option-block ">
 
                       </div>
-                      <div class="test__item">
-                        2
+                      <div class="script-slider__item option-block ">
 
                       </div>
-                      <div class="test__item">
-                        3
+                      <div class="script-slider__item option-block ">
 
                       </div>
-
-                      <div class="test__item">
-                        4
+                      <div class="script-slider__item option-block ">
 
                       </div>
-                      <div class="test__item">
-                        5
-
-                      </div>
-                      <div class="test__item">
-                        6
-
-                      </div>
-                      <div class="test__item">
-                        7
+                      <div class="script-slider__item option-block ">
 
                       </div>
 
-                      <div class="test__item">
-                        8
+                      <div class="script-slider__item option-block ">
 
                       </div>
 
-                      <div class="test__item">
-                        9
+                      <div class="script-slider__item option-block ">
 
                       </div>
-
                     </div>
-                    <div class="test__page">
-                      <div class="test__item">
-                        10
-
+                    <div class="script-slider__page">
+                      <div class="script-slider__item option-block ">
 
                       </div>
 
@@ -91,9 +67,11 @@
               </section>
             </div>
           </div>
-
+<!--
           <section class="section devices-section">
             <h2 class="section__title">Избранные устройства</h2>
+
+
             <div class="devices-swiper__arrows-prev">
 
             </div>
@@ -148,13 +126,9 @@
                     11
 
                   </div>
-
-
               </div>
-
             </div>
-
-          </section>
+          </section> -->
         </main>
       </div>
       <div class="page__footer">
