Added script section

--- a/src/index.html
+++ b/src/index.html
@@ -25,45 +25,7 @@
                     <div class="slider-arrows__btn slider-arrows__btn--next js-script-slider-next"></div>
                   </div>
                 </div>
-                <div class="script-block script-slider js-script-slider">
-                  <div class="script-slider__inner">
-                    <div class="script-slider__page">
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-                    </div>
-                    <div class="script-slider__page">
-                      <div class="script-slider__item option-block ">
-
-                      </div>
-
-                    </div>
-                  </div>
-
-
-
-                </div>
-
+                @@include('_include/script-block.html')
               </section>
             </div>
           </div>
