--- a/src/index.html
+++ b/src/index.html
@@ -29,68 +29,19 @@
               </section>
             </div>
           </div>
-<!--
+
           <section class="section devices-section">
-            <h2 class="section__title">Избранные устройства</h2>
-
-
-            <div class="devices-swiper__arrows-prev">
-
-            </div>
-            <div class="devices-swiper__arrows-next">
-
-            </div>
-            <div class="devices-swiper">
-
-              <div class="devices-swiper__inner test2">
-                  <div class="test2__item">
-                    1
-
-                  </div>
-                  <div class="test2__item">
-                    2
-
-                  </div>
-                  <div class="test2__item">
-                    3
-
-                  </div>
-                  <div class="test2__item">
-                    4
-
-                  </div>
-                  <div class="test2__item">
-                    5
-
-                  </div>
-                  <div class="test2__item">
-                    6
-
-                  </div>
-                  <div class="test2__item">
-                    7
-
-                  </div>
-                  <div class="test2__item">
-                    8
-
-                  </div>
-                  <div class="test2__item">
-                    9
-
-                  </div>
-                  <div class="test2__item">
-                    10
-
-                  </div>
-
-                  <div class="test2__item">
-                    11
-
-                  </div>
+            <div class="container">
+              <div class="section__title-wr">
+                <h2 class="section__title">Избранные устройства</h2>
+                <div class="slider-arrows">
+                  <div class="slider-arrows__btn slider-arrows__btn--prev js-device-slider-prev"></div>
+                  <div class="slider-arrows__btn slider-arrows__btn--next js-device-slider-next"></div>
+                </div>
               </div>
+              @@include('_include/device-block.html')
             </div>
-          </section> -->
+          </section>
         </main>
       </div>
       <div class="page__footer">
