Added show arrows for slider js

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,9 @@
               <section class="section top-section__right scripts-section">
                 <div class="section__title-wr">
                   <h2 class="section__title">Избранные сценарии</h2>
-                  <div class="slider-arrows">
-                    <div class="slider-arrows__btn slider-arrows__btn--prev js-script-slider-prev"></div>
-                    <div class="slider-arrows__btn slider-arrows__btn--next js-script-slider-next"></div>
+                  <div class="slider-arrows js-script-slider-btns">
+                    <div class="slider-arrows__btn slider-arrows__btn--prev"></div>
+                    <div class="slider-arrows__btn slider-arrows__btn--next"></div>
                   </div>
                 </div>
                 @@include('_include/script-block.html')
@@ -60,9 +60,9 @@
                       <option class="filters-mobile__item" data-value="cameras">Камеры</option>
                     </select>
                   </div>
-                  <div class="slider-arrows devices-section__arrows">
-                    <div class="slider-arrows__btn slider-arrows__btn--prev js-device-slider-prev"></div>
-                    <div class="slider-arrows__btn slider-arrows__btn--next js-device-slider-next"></div>
+                  <div class="slider-arrows devices-section__arrows js-device-slider-btns">
+                    <div class="slider-arrows__btn slider-arrows__btn--prev"></div>
+                    <div class="slider-arrows__btn slider-arrows__btn--next"></div>
                   </div>
                 </div>
 
