--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
             <div class="top-section">
               <section class="section top-section__left">
                 <h2 class="section__title">Главное</h2>
-                @@include('_include/main-block.html')
+                <div class="section__inner">
+                  @@include('_include/main-block.html')
+                </div>
               </section>
               <section class="section top-section__right scripts-section">
                 <div class="section__title-wr">
@@ -25,7 +27,9 @@
                     <div class="slider-arrows__btn slider-arrows__btn--next"></div>
                   </div>
                 </div>
-                @@include('_include/script-block.html')
+                <div class="section__inner">
+                  @@include('_include/script-block.html')
+                </div>
               </section>
             </div>
           </div>
@@ -66,7 +70,9 @@
                   </div>
                 </div>
               </div>
-              @@include('_include/device-block.html')
+              <div class="section__inner">
+                @@include('_include/device-block.html')
+              </div>
             </div>
           </section>
         </main>
