--- a/src/index.html
+++ b/src/index.html
@@ -81,6 +81,7 @@
         @@include('_include/footer.html')
       </div>
     </div>
+    @@include('_include/popup.html')
     @@include('_include/page-bottom.html')
   </body>
 </html>
