--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
     <meta name="description" content="">
     @@include('_include/page-head.html')
   </head>
-  <body>
+  <body id="fixed" style="overflow: hidden; max-height: 100vh; position: fixed; width: 100%;">
     <div class="page__inner">
       <div class="page__content">
         @@include('_include/header.html')
-        <main role="main">
+        <main role="main" style="display: none;">
           <div class="container">
             <div class="top-section">
               <section class="section top-section__left">
