Fixed touch slider

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
               <section class="section top-section__right scripts-section">
                 <div class="section__title-wr">
                   <h2 class="section__title">Избранные сценарии</h2>
-                  <div class="slider-arrows js-script-slider-btns">
+                  <div class="slider-arrows js-script-slider-btns slider-arrows--is-hidden">
                     <div class="slider-arrows__btn slider-arrows__btn--prev"></div>
                     <div class="slider-arrows__btn slider-arrows__btn--next"></div>
                   </div>
@@ -64,7 +64,7 @@
                       <option class="filters-mobile__item" data-value="cameras">Камеры</option>
                     </select>
                   </div>
-                  <div class="slider-arrows devices-section__arrows js-device-slider-btns">
+                  <div class="slider-arrows devices-section__arrows js-device-slider-btns slider-arrows--is-hidden">
                     <div class="slider-arrows__btn slider-arrows__btn--prev"></div>
                     <div class="slider-arrows__btn slider-arrows__btn--next"></div>
                   </div>
